--- a/game.css
+++ b/game.css
@@ -1,24 +1,30 @@
     body{
+      font-family: 'Cuprum', sans-serif;
       background:#eff;
     }
+
     h1{
-      text-align:center;
+      font-family: 'Sigmar One', cursive;
+      text-align: center;
       margin-bottom:10px;
     }
+
     p.info{
       text-align:center;
       width:500px;
       margin:0 auto;
       font-size:18px;
       font-weight:bold;
-      color:#e16;
-      margin-bottom:20px;
+      color: #000066;
+      margin-bottom:0px;
       }
+
     game-base{
       width:640px;
       margin:0 auto;
       padding-top:60px;
       }
+
     #game-table{
       width: 700px;
       height: 700px;
@@ -26,6 +32,7 @@
       background:url("http://connect4.gamesolver.org/image?pos=null") 0 0 no-repeat;
       position:relative;
       }
+
     .disc{
       position:absolute;
       z-index:-1;
@@ -36,9 +43,35 @@
       border-radius:46px;
       transition:all .3s;
     }
+
     .disc.red{
       background:#d96666;
     }
+
     .disc.yellow{
       background:#ffeb79;
+    }
+
+    div.player1, div.player2 {
+      font-size: 30px;
+      padding: 10px;
+      margin: 10px;
+      border-style: solid;
+      width: 10%;
+      transform: translateY(300px);
+    }
+
+    div.player1 {
+      padding-left: 52px;
+      margin-left: 10px;
+      color: #0099cc;
+    }
+
+    div.player2 {
+      transform: translateY(190px);
+      margin-right: 10px;
+      padding-right: 52px;
+      float: right;
+      text-align: right;
+      color: #cc0000;
     }
