--- a/game.css
+++ b/game.css
@@ -18,20 +18,6 @@
       color: #000066;
       }
 
-    game-base{
-      width:640px;
-      margin:0 auto;
-      padding-top:30px;
-      }
-
-    #game-table{
-      width: 700px;
-      height: 700px;
-      margin: 0 auto;
-      background:url("http://connect4.gamesolver.org/image?pos=null") 0 0 no-repeat;
-      position:relative;
-      }
-
     .disc{
       position:absolute;
       z-index:-1;
@@ -110,3 +96,33 @@
       border-radius: 12px;
     }
 
+  #gridContainer{
+    background-color: black;
+    top:250px;
+    left:335px;
+    padding:0;
+    margin: 0 auto;
+    display:inline-block;
+    position: absolute;
+}
+    span.cell{
+    height:75px;
+    width:75px;
+    border:1px solid black; /* actual width & height is 25px because of border */
+    background-color: #FFF;
+    padding:0;
+    margin:0;
+    position:absolute;
+    border-radius: 50%;
+  }
+  
+  /* Get rid of the cell border when it is selected */
+  span.cellSelected{
+    height:75px;
+    width:75px;
+    background-color: red;
+    padding:0;
+    margin:0;
+    position:absolute;
+  }
+  
