--- a/game.css
+++ b/game.css
@@ -99,7 +99,8 @@
     padding:0;
     margin:0;
     position:absolute;
-    border-radius: 50%
+    border-radius: 50%;
+    color: #eff;
   }
 
       .cell{
